[build-system]
requires = ["setuptools", "wheel", "maturin"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"h2_plan" = ["**/*.json", "**/*.yml", "**/*.yaml"]

[project]
name = "h2_plan"
version = "0.1"
description = "Stochastic hydrogen planning model"
authors = [
  { name = "Cameron Aldren", email = "cameronaldren@icloud.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "meteor_py  @ git+https://github.com/cja119/meteor_py.git",
    "PyStochOpt @ git+https://github.com/cja119/pystochopt.git",
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "dask>=2025.2.0",
    "distributed",
    "pyomo",
    "maturin",
    "bokeh",
    "plotly",
    "cartopy",
    "ipykernel",
    "ipython",
    "jupyter_client",
    "jupyter_core",
    "aiohttp",
    "aiobotocore",
    "botocore",
    "aiosignal",
    "aioitertools",
    "fsspec",
    "earthaccess",
    "brotli",
    "lz4",
    "fonttools",
    "cloudpickle",
    "dill",
    "psutil",
    "pqdm",
    "gurobipy",
    "pyyaml"
]